<resources>
    <string name="app_name">Calculator</string>
    <string name="standard_page">Standard Mode</string>
    <string name="programmer_page">Programmer Mode</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="backspace">←</string>
    <string name="Rbracket">(</string>
    <string name="decimal">.</string>
    <string name="Lbracket">)</string>
    <string name="DEC">DEC</string>
    <string name="BIN">BIN</string>
    <string name="HEX">HEX</string>
    <string name="convertFrom">Entered type:</string>
    <string name="convert">CONVERT</string>
</resources>
